--- a/nm-framework-parent/pom.xml
+++ b/nm-framework-parent/pom.xml
@@ -13,6 +13,7 @@
         <module>../test-rabbitmq-consumer</module>
         <module>../nm‐service‐manage‐cms‐client</module>
         <module>../nm-service-manage-course</module>
+        <module>../nm-service-base-filesystem</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
