--- a/nm-service-manage-course/src/main/resources/application.yml
+++ b/nm-service-manage-course/src/main/resources/application.yml
@@ -40,9 +40,16 @@ ribbon:
   ReadTimeout: 6000 #请求处理的超时时间
   eureka:
     enabled: true
-course-publish:
+course-publish: #站点物理路径+页面物理路径+页面名称 预览和发布要一致
   siteId: 5b30cba5f58b4411fc6cb1e5
   templateId: 5b345a6b94db44269cb2bfec
+  previewUrl: http://www.ningmeng.com/cms/preview/
+  pageWebPath: /course/detail/
+  pagePhysicalPath: /course/detail/
+  dataUrlPre: http://localhost:31200/course/courseview/
+course‐publish:
+  siteId: 5b30cba5f58b4411fc6cb1e5
+  templateId: 5ad9a24d68db5239b8fef199
   previewUrl: http://www.ningmeng.com/cms/preview/
   pageWebPath: /course/detail/
   pagePhysicalPath: /course/detail/
