--- a/nm-framework-parent/pom.xml
+++ b/nm-framework-parent/pom.xml
@@ -19,6 +19,7 @@
         <module>../nm-service-manage-media</module>
         <module>../nm-service-manage-media-processor</module>
         <module>../nm-service-learning</module>
+        <module>../nm-service-ucenter-auth</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
